# fastapi-zero

./: alembic.ini  pyproject.toml
fastapi_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fastapi_zero/routers/: auth.py  users.py
migratios/: env.py
migratios/versions/: 913fec64753f_create_users_table.py  babf26cddac0_atualizacao_update_coluna_user.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
