[tool.poetry]
name = "fastapi-zero"
version = "0.1.0"
description = ""
authors = ["joaobrc <56743873+joaobrc@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fastapi_zero"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.fast.dependencies]
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.1.1"}


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"
blue = "^0.9.1"
httpx = "^0.24.1"
isort = "^5.12.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "0.2.1"


[tool.ruff]
line-length = 79
exclude = ['.venv', 'migratons']

[tool.ruff.lint]
preview= true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.blue]
extend-exclude = '(migrations/)'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'blue . && isort .'
run = 'uvicorn fastapi_zero.app:app --reload'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fastapi_zero -vv'
post_test = 'coverage html'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
